--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@ body {
     opacity: 0;
     transform: translateY(5vh);
     visibility: hidden;
-    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+    transition: opacity 0.5s ease-out, transform 1s ease-out;
     will-change: opacity, visibility;
 }
 
@@ -63,11 +63,13 @@ h2 {
     padding: 10px;
     text-decoration: none;
     color: var(--text);
+    transition: ease-out 0.25s;
 }
 
 #navbar a:hover {
     color: var(--accent-light);
     background-color: var(--bg-invert);
+    transition: ease-out 0.25s;
 }
 
 .container {
@@ -87,4 +89,8 @@ h2 {
 
 .container.small {
     width: 25%;
+}
+
+hr {
+    color: var(--accent-light);
 }
