--- a/assets/style.css
+++ b/assets/style.css
@@ -94,3 +94,34 @@ h2 {
 hr {
     color: var(--accent-light);
 }
+
+#particles-js {
+    height: 100%;
+    width: 100%;
+}
+
+.retardedfuckingheaderthingbecauseidkhowtowebdev {
+    position: absolute;
+    top: 0%;
+    /* left: 50%; */
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+    width: 100%;
+    height: 100%;
+}
+
+.headerwrapper {
+    position: relative;
+    height: 90vh;
+    /*thanks f3lix for helping me fix this */
+}
+
+.headertransition {
+    position: absolute;
+    background-image: linear-gradient(#00000000,var(--bg));
+    width: 100%;
+    height: 15vh;
+    bottom: 0%;
+}
