--- a/assets/style.css
+++ b/assets/style.css
@@ -93,6 +93,7 @@ h2 {
 
 hr {
     color: var(--accent-light);
+    width: 50%;
 }
 
 #particles-js {
@@ -124,4 +125,12 @@ hr {
     width: 100%;
     height: 15vh;
     bottom: 0%;
+}
+
+br {
+    margin: 5px;
+}
+
+.alignleft {
+    text-align: left;
 }
